attempt to fix layout bug

--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 .main-container {
-  max-width: 800px;
-  min-width: 600px;
+  max-width: 1400px;
+  min-width: 1200px;
   margin: 4em auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border: 2px solid coral;
+}
+nav {
+  position: relative;
 }
 ul {
   list-style: none;
   padding: 0;
-  position: absolute;
 }
 li {
   padding: 10px;
@@ -16,6 +19,7 @@ li {
   font-weight: bold;
   font-size: 24px;
   color: #ffb344;
+  margin-left: 3px;
 }
 li a {
   text-decoration: none;
@@ -26,13 +30,25 @@ li a {
   background-color: #fff8e5;
   border-radius: 10px;
 }
-.content-container {
-  display: flex;
-  float: right;
-  margin: 2em auto;
-  flex-direction: column;
-  align-items: center;
+.content {
+  display: inline-block;
+  /* flex-direction: column; */
+  justify-content: right;
+}
+.JScontent-container {
+  padding: 1em;
   color: #e05d5d;
+  max-width: 75%;
+  border: 2px solid coral;
+  text-align: center;
+}
+.jQcontent-container {
+  padding: 1em;
+  color: #e05d5d;
+  max-width: 75%;
+  background-color: black;
+  text-align: center;
+  border: 2px solid coral;
 }
 .content-container input {
   width: 50%;
